# odd-collector-aws

./: Dockerfile  README.md  collector_config.yaml  collector_config_example.yaml  pyproject.toml
.github/workflows/: bump_and_build.yaml  create_pypi_package.yaml
config_examples/: athena.yaml  glue.yaml  s3.yaml  s3_delta.yaml
docker/: .env
odd_aws_collector/: __main__.py
odd_aws_collector/adapters/athena/: adapter.py
odd_aws_collector/adapters/dynamodb/: adapter.py
odd_aws_collector/adapters/glue/: adapter.py
odd_aws_collector/adapters/quicksight/: adapter.py
odd_aws_collector/adapters/redshift/: adapter.py
odd_aws_collector/adapters/s3/: adapter.py
odd_aws_collector/adapters/sagemaker_featurestore/: adapter.py
odd_aws_collector/domain/: collector.py  collector_config.py  plugin.py
odd_aws_collector/services/: http_client.py
odd_collector_aws/: __init__.py  __main__.py  const.py  errors.py  version.py
odd_collector_aws/adapters/athena/: adapter.py
odd_collector_aws/adapters/dms/: README.md  __init__.py  adapter.py  client.py
odd_collector_aws/adapters/dynamodb/: adapter.py  metadata.py
odd_collector_aws/aws/: aws_client.py
odd_collector_aws/domain/: dataset_config.py  fetch_paginator.py  paginator_config.py  plugin.py  to_data_entity.py
odd_collector_aws/filesystem/: pyarrow_fs.py
odd_collector_aws/use_cases/: s3_dataset_use_case.py  s3_use_case.py  sagemaker_use_case.py
odd_collector_aws/utils/: __init__.py  create_generator.py  flat_list_get.py  flatdict.py  handle_nested_structure.py
tests/utils/: get_dataset_class.py
(+80 files in other folders)
